circle/includes/style.css
/* ---- Global style ---- */
html {
    box-sizing: border-box;
}
*,*:before, *:after {
  box-sizing: inherit;
}

body {
  color:#343434;
  margin: 0;
  padding: 0;
  font-family:'Montserrat', sans-serif;
  font-size: 15px;
  line-height: 1.5;
  /*TEST*/
  text-align: center;
}

a {
  color: #ffe66d;
}

.projects a {
    color: #403636;
}
a:hover {
  text-decoration: none;
}

.mke {
  width: 100%;
}


/* Headings */
h1, h2 {
  font-size: 45px;
  line-height: 1;
  font-family:'Caveat', cursive;
  font-weight: bold;
  margin: 10px, 0px, 10px, 0px;
  text-align: center;
}

h2 {
  font-size: 45px;
}

h3 {
  margin-bottom: 0;
}

.content-wrap {
  max-width: 800px;
  width: 85%;
  margin: 0 auto;
  padding: 60px 0;    
}


/* ---- Navigation Menu ---- */
ul.navigation {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: black;
  display: flex;
  justify-content: center;
}

li.navigation {
  float: left;
  
}

li a.navigation {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  transition: all 200ms ease-out;
}

li a:hover.navigation {
  background-color: #6abda8; 
}

.site-name {
  margin-left: auto;
  margin-right: auto;
  display: block;
  padding: 1rem;
}


/* ---- Site & Navigation Logo Images ---- */
#sitelogo {
  margin: 0, auto, 0, auto;
  padding: 15px;
}

#navlogo {
  padding-top: 5px;
  padding-bottom: 5px;
}


/* ---- Forms ---- */
form.login {
  text-align: left;
  display: inline-block;
  padding: 10px, auto, 15px, auto;
  margin: 10px, auto, 10px, auto;
  background: #f1f1f1;
  box-shadow: 4.0px 6.0px 6.0px hsl(0deg 0% 0% / 0.38);
  border: 2px solid #ccc;
  border-radius: 6px;
  width: 50%;
}

fieldset.login {
  border: 0;
}

input.login {
  margin-bottom: 10px;
  padding: 5px;
  border: 1px solid #ccc;
  border-radius: 3px;
  width: 80%;
  min-width: 100px;
  vertical-align: bottom;
  top: -10px;
  font-size: 16px;
}

label.login {
  margin-bottom: 10px;
}

select {
  cursor: pointer;
}

input, select, textarea {
  /*margin-bottom: 10px;*/
  border: 1px solid #ccc;
  border-radius: 3px;
}

textarea {
  width: calc(100% - 12px);
  padding: 5px;
}


/* ---- All buttons (Including submit input) ---- */
.button {
  background-color: #000000;
  border: 0;
  border-radius: 15px;
  box-sizing: border-box;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  line-height: normal;
  outline: none;
  text-align: center;
  transition: all 200ms ease-out;
  user-select: none;
  touch-action: manipulation;
  width: 50%;
  min-width: 50px;
  min-height: 40px;
}

.button:hover {
  background-color: #757575;
}

.warnbutton {
  background-color: #a00000;
  border: 0;
  border-radius: 15px;
  box-sizing: border-box;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  line-height: normal;
  outline: none;
  text-align: center;
  transition: all 200ms ease-out;
  user-select: none;
  touch-action: manipulation;
  width: 50%;
  min-width: 50px;
  min-height: 40px;
}

.warnbutton:hover {
  background-color: #fd2525;
}


/* ---- Footer ---- */
#footer {
  margin-top: 50px;
}

